load("//tools/base/bazel:maven.bzl", "maven_repo")
load("//tools/base/bazel:kotlin.bzl", "kotlin_library")
load("//tools/base/build-system/integration-test/connected:connected-test.bzl", "gradle_connected_test")
load("//tools/base/bazel/avd:avd.bzl", "avd")

kotlin_library(
    name = "connected",
    srcs = glob([
        "src/main/java/**/*.kt",
        "src/main/java/**/*.java",
    ]),
    #keep sorted
    deps = [
        "//tools/base/bazel/avd:emulator_rule",
        "//tools/base/testutils:tools.testutils",
        "//tools/base/third_party:junit_junit",
    ],
)

#keep sorted
TEST_DEPS = [
    ":connected",
    "//tools/analytics-library/protos/src/main/proto",
    "//tools/apksig",
    "//tools/apkzlib",
    "//tools/base/annotations",
    "//tools/base/bazel/avd:emulator_rule",
    "//tools/base/build-system:gradle-api",
    "//tools/base/build-system/builder",
    "//tools/base/build-system/builder-model",
    "//tools/base/build-system/builder-test-api:tools.builder-test-api",
    "//tools/base/build-system/gradle-api",
    "//tools/base/build-system/gradle-core",
    "//tools/base/build-system/integration-test/framework",
    "//tools/base/build-system/integration-test/framework/src/main/proto",
    "//tools/base/common:tools.common",
    "//tools/base/ddmlib:tools.ddmlib",
    "//tools/base/repository:tools.testlib",
    "//tools/base/sdk-common:tools.sdk-common",
    "//tools/base/sdklib:tools.sdklib",
    "//tools/base/testutils:tools.testutils",
    "//tools/base/third_party:com.google.guava_guava",
    "//tools/base/third_party:com.google.protobuf_protobuf-java",
    "//tools/base/third_party:com.google.protobuf_protobuf-java-util",
    "//tools/base/third_party:com.google.truth.extensions_truth-java8-extension",
    "//tools/base/third_party:com.google.truth_truth",
    "//tools/base/third_party:org.jetbrains.kotlin_kotlin-android-extensions-runtime",
    "//tools/base/third_party:org.jetbrains.kotlin_kotlin-stdlib",
    "//tools/base/third_party:org.jetbrains.kotlin_kotlin-test",
    "//tools/base/zipflinger",
]

avd(name = "avd")

#keep sorted
TEST_DATA = [
    ":avd",
    "//prebuilts/studio/sdk:build-tools/latest",
    "//prebuilts/studio/sdk:platform-tools",
    "//prebuilts/studio/sdk:platforms/latest",
    "//tools/base/build-system:gradle-distrib",
    "//tools/base/build-system/aapt2:aapt2_for_tests",
]

#keep sorted
TEST_MAVEN_REPOS = []

TEST_MAVEN_REPO_MANIFESTS = [
    "//tools/base/build-system:gradle_plugin_no_databinding_repo",
    "//tools/base/build-system/integration-test:androidx_latest",
    "//tools/base/build-system/integration-test:support_library_latest",
    "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
    "//tools/base/build-system/integration-test:utp_plugins",
    "//tools/base/build-system/integration-test/connected:prebuilts",
]

gradle_connected_test(
    name = "AdditionalTestOutputConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/additionalTestOutput"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AdditionalTestOutputOverrideConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/additionalTestOutputOverride"],
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AndroidTestResourcesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AnnotationProcessorConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ApiConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/api"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ApplibtestConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/applibtest"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AttrOrderConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/attrOrder"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "BasicConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/basic"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "CmakeJniLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/nativebuild/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkJniLib",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ComposeHelloWorldConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/composeHelloWorld"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS + [
        "//tools/base/build-system/integration-test:kotlin_gradle_plugin_1_4_32_prebuilts",
    ],
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "CoreLibraryDesugarConversionConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "CustomTestedApksTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS + ["//tools/base/build-system/integration-test:androidx_test_latest"],
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "D8DesugaringConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DataBindingExternalArtifactDependencyConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/databinding/",
    data = TEST_DATA + [
        "//tools/data-binding:integration-test-projects",
        "//tools/data-binding:integration-test-projects-support",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = [
        "//tools/base/build-system:gradle_plugin_repo",
        "//tools/base/build-system/integration-test:androidx_latest",
        "//tools/base/build-system/integration-test:support_library_latest",
        "//tools/base/build-system/integration-test/connected:prebuilts",
        "//tools/base/build-system/integration-test/connected:databinding_prebuilts",
    ],
    # TEST_MAVEN_REPOS with databinding
    maven_repos = [
        "//tools/data-binding:data_binding_runtime",
    ],
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DataBindingIntegrationTestAppsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/databinding/",
    data = TEST_DATA + [
        "//tools/data-binding:integration-test-projects",
        "//tools/data-binding:integration-test-projects-support",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = [
        "//tools/base/build-system:gradle_plugin_repo",
        "//tools/base/build-system/integration-test:androidx_latest",
        "//tools/base/build-system/integration-test:support_library_latest",
        "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
        "//tools/base/build-system/integration-test/connected:prebuilts",
        "//tools/base/build-system/integration-test/connected:databinding_prebuilts",
    ],
    # TEST_MAVEN_REPOS with databinding
    maven_repos = [
        "//tools/data-binding:data_binding_runtime",
    ],
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DensitySplitConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/densitySplit"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DependenciesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/dependencies"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DynamicFeatureConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/feature/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavoredConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavored"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavoredlibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavoredlib"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavorlibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavorlib"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavorsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavors"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "JacocoConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "JarsInLibrariesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/assets"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "KotlinAppConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/kotlinApp"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibMinifyJarDepConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libMinifyJarDep"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibMinifyLibDepConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libMinifyLibDep"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibsTestConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libsTest"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibTestDepConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libTestDep"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MigratedConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/migrated"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MinifyConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/minify"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MinifyLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/minifyLib"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MlModelBindingConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + [
        "//tools/base/build-system/integration-test:test-projects/mlModelBinding",
        "//prebuilts/tools/common/mlkit/testData",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiDexConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multiDex"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiDexWithLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multiDexWithLib"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiProjectConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multiproject"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiresConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multires"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkConnectedCheckTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkJniLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkJniLib",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkLibPrebuiltsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkLibPrebuilts",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkSanAngelesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkSanAngeles",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NoSplitNdkVariantsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "Overlay1ConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/overlay1"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "Overlay2ConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/overlay2"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "Overlay3ConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/overlay3"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ParentLibsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/parentLibsTest"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "PkgOverrideConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/pkgOverride"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "RenderscriptNdkConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/nativebuild/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/renderscriptNdk",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ResValueTypeConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ShardingConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/appWithTests"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SameNamedLibsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/sameNamedLibs"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestModuleConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestModule"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestModuleWithMinifiedAppConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestModuleWithMinifiedApp"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestWithAarDependencyConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestModule"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestWithMinificationButNoObfuscationConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestWithMinificationButNoObfuscation"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SigningConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "TestingSupportLibraryConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "TestWithSameDepAsAppConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/dependencies/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "UtpConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + [
        "//tools/adt/idea/utp:addGradleAndroidTestListener",
        "//tools/base/build-system/integration-test:test-projects/utp",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FailureRetentionConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/failureRetention"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_manifests = TEST_MAVEN_REPO_MANIFESTS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

# Maven repo with all the dependencies required by test projects.
#
# Quick way of updating this list:
# - Run the new test with bazel
# - Copy the output log to $PWD/test.log
# - Run this command:
# grep -F '> Could not find' test.log \
#   | sed -e 's:> Could not find :"//prebuilts/tools/common/m2/repository/:' \
#   | sed -e 's/:/\//g' \
#   | sed -e 's/\.$/:jar",/' \
#   | sed -e 's/\([a-z]\)\.\([a-z]\)/\1\/\2/g'
maven_repo(
    name = "prebuilts",
    # keep sorted
    artifacts = [
        "//prebuilts/tools/common/m2/repository/android/arch/core/common/1.0.0:jar",
        "//prebuilts/tools/common/m2/repository/android/arch/core/common/1.1.0:jar",
        "//prebuilts/tools/common/m2/repository/android/arch/core/runtime/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/common/1.1.0:jar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/livedata-core/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/livedata/1.1.1:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/runtime/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/viewmodel/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/navigation/navigation-common/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/navigation/navigation-fragment/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/navigation/navigation-runtime/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/activity/activity-compose/1.3.0-alpha02:aar",
        "//prebuilts/tools/common/m2/repository/androidx/activity/activity-ktx/1.3.0-alpha02:aar",
        "//prebuilts/tools/common/m2/repository/androidx/activity/activity/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/activity/activity/1.2.0-alpha02:aar",
        "//prebuilts/tools/common/m2/repository/androidx/activity/activity/1.2.0-alpha07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/activity/activity/1.3.0-alpha02:aar",
        "//prebuilts/tools/common/m2/repository/androidx/annotation/annotation-experimental/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/annotation/annotation-experimental/1.1.0-alpha01:aar",
        "//prebuilts/tools/common/m2/repository/androidx/annotation/annotation/1.1.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/annotation/annotation/1.2.0-rc01:jar",
        "//prebuilts/tools/common/m2/repository/androidx/appcompat/appcompat-resources/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/appcompat/appcompat-resources/1.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/appcompat/appcompat-resources/1.3.0-beta01:aar",
        "//prebuilts/tools/common/m2/repository/androidx/appcompat/appcompat/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/appcompat/appcompat/1.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/appcompat/appcompat/1.3.0-beta01:aar",
        "//prebuilts/tools/common/m2/repository/androidx/arch/core/core-common/2.1.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/arch/core/core-runtime/2.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/autofill/autofill/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/collection/collection/1.1.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/animation/animation-core/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/animation/animation/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/compiler/compiler/1.0.0-beta07:jar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/foundation/foundation-layout/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/foundation/foundation/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/material/material-icons-core/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/material/material-ripple/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/material/material/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/runtime/runtime-saveable/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/runtime/runtime/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui-geometry/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui-graphics/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui-text/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui-tooling-data/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui-tooling/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui-unit/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui-util/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/constraintlayout/constraintlayout-core/1.0.0-alpha1:jar",
        "//prebuilts/tools/common/m2/repository/androidx/core/core-ktx/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/core/core/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/core/core/1.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/core/core/1.3.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/core/core/1.5.0-beta01:aar",
        "//prebuilts/tools/common/m2/repository/androidx/dynamicanimation/dynamicanimation/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/fragment/fragment/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/fragment/fragment/1.3.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-common/2.1.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-common/2.3.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-common/2.3.0-alpha01:jar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata-core-ktx/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata-core/2.3.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata-core/2.3.0-alpha01:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata-ktx/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-runtime-ktx/2.3.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-runtime/2.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-runtime/2.3.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-runtime/2.3.0-alpha01:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel-ktx/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel-ktx/2.3.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel-savedstate/2.3.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel-savedstate/2.3.0-alpha01:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel/2.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel/2.3.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel/2.3.0-alpha01:aar",
        "//prebuilts/tools/common/m2/repository/androidx/navigation/navigation-common/2.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/navigation/navigation-fragment/2.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/navigation/navigation-runtime/2.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/savedstate/savedstate-ktx/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/savedstate/savedstate/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/savedstate/savedstate/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/core/1.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/core/1.4.0-alpha06:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/espresso/espresso-core/3.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/espresso/espresso-idling-resource/3.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/ext/junit/1.1.1:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/ext/junit/1.1.3-alpha02:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/monitor/1.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/monitor/1.4.0-alpha06:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/orchestrator/1.4.0-alpha06:apk",
        "//prebuilts/tools/common/m2/repository/androidx/test/rules/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/rules/1.4.0-alpha06:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/runner/1.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/runner/1.4.0-alpha06:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/services/storage/1.4.0-alpha06:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/services/test-services/1.4.0-alpha06:apk",
        "//prebuilts/tools/common/m2/repository/androidx/tracing/tracing/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/vectordrawable/vectordrawable-animated/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/vectordrawable/vectordrawable/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/versionedparcelable/versionedparcelable/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/versionedparcelable/versionedparcelable/1.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/multidex-instrumentation/1.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/multidex/1.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/desugar_jdk_libs/1.1.5:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/desugar_jdk_libs_configuration/1.1.5:jar",
        "//prebuilts/tools/common/m2/repository/com/google/android/gms/play-services-base/15.0.1:aar",
        "//prebuilts/tools/common/m2/repository/com/google/android/gms/play-services-basement/15.0.1:aar",
        "//prebuilts/tools/common/m2/repository/com/google/android/gms/play-services-tasks/15.0.1:aar",
        "//prebuilts/tools/common/m2/repository/com/google/code/findbugs/jsr305/1.3.9:jar",
        "//prebuilts/tools/common/m2/repository/com/google/code/findbugs/jsr305/2.0.1:jar",
        "//prebuilts/tools/common/m2/repository/com/google/code/gson/gson/2.7:jar",
        "//prebuilts/tools/common/m2/repository/com/google/code/gson/gson/2.8.6:jar",
        "//prebuilts/tools/common/m2/repository/com/google/flatbuffers/flatbuffers-java/1.12.0:jar",
        "//prebuilts/tools/common/m2/repository/com/google/guava/guava/19.0:jar",
        "//prebuilts/tools/common/m2/repository/com/google/testing/platform/android-device-provider-gradle/0.0.8-alpha04:jar",
        "//prebuilts/tools/common/m2/repository/com/google/testing/platform/android-device-provider-local/0.0.8-alpha04:jar",
        "//prebuilts/tools/common/m2/repository/com/google/testing/platform/android-driver-instrumentation/0.0.8-alpha04:jar",
        "//prebuilts/tools/common/m2/repository/com/google/testing/platform/android-test-plugin-host-device-info/0.0.8-alpha04:jar",
        "//prebuilts/tools/common/m2/repository/com/google/testing/platform/android-test-plugin-host-retention/0.0.8-alpha04:jar",
        "//prebuilts/tools/common/m2/repository/com/google/testing/platform/android-test-plugin/0.0.8-alpha04:jar",
        "//prebuilts/tools/common/m2/repository/com/google/testing/platform/core-proto/0.0.8-alpha04:jar",
        "//prebuilts/tools/common/m2/repository/com/google/testing/platform/core/0.0.8-alpha04:jar",
        "//prebuilts/tools/common/m2/repository/com/google/testing/platform/launcher/0.0.8-alpha04:jar",
        "//prebuilts/tools/common/m2/repository/com/squareup/javawriter/2.1.1:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/commons/commons-compress/1.18:jar",
        "//prebuilts/tools/common/m2/repository/org/checkerframework/checker-qual/2.5.8:jar",
        "//prebuilts/tools/common/m2/repository/org/hamcrest/hamcrest-integration/1.3:jar",
        "//prebuilts/tools/common/m2/repository/org/hamcrest/hamcrest-library/1.3:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.agent/0.7.4.201502262128:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.agent/0.8.3:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.ant/0.7.4.201502262128:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.ant/0.8.3:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.core/0.7.4.201502262128:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.core/0.8.3:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.report/0.7.4.201502262128:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.report/0.8.3:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlinx/kotlinx-collections-immutable-jvm/0.3.4:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlinx/kotlinx-coroutines-android/1.4.1:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlinx/kotlinx-coroutines-android/1.4.3:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlinx/kotlinx-coroutines-core-common/1.3.6:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlinx/kotlinx-coroutines-core-jvm/1.4.3:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlinx/kotlinx-coroutines-core/1.3.8:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlinx/kotlinx-coroutines-core/1.4.1:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlinx/kotlinx-coroutines-core/1.4.3:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm-commons/5.0.1:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm-debug-all/5.0.1:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm-debug-all/5.2:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm-tree/5.0.1:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm/5.0.1:jar",
        "//prebuilts/tools/common/m2/repository/org/tensorflow/tensorflow-lite-metadata/0.1.0:jar",
        "//prebuilts/tools/common/m2/repository/org/tensorflow/tensorflow-lite-support/0.1.0:aar",
        "//prebuilts/tools/common/m2/repository/org/tensorflow/tensorflow-lite/2.4.0:aar",
    ],
    use_zip = False,
    visibility = ["__subpackages__"],
)

# Maven repo with all the dependencies required by databinding tests.
#
# Quick way of updating this list:
# - Run the new test with bazel
# - Copy the output log to $PWD/test.log
# - Run this command:
# grep -F '> Could not find' test.log \
#   | sed -e 's:> Could not find :"//prebuilts/tools/common/m2/repository/:' \
#   | sed -e 's/:/\//g' \
#   | sed -e 's/\.$/:jar",/' \
#   | sed -e 's/\([a-z]\)\.\([a-z]\)/\1\/\2/g'
maven_repo(
    name = "databinding_prebuilts",
    # keep sorted
    artifacts = [
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/common/1.0.3:jar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/runtime/1.0.3:aar",
        "//prebuilts/tools/common/m2/repository/androidx/activity/activity/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/appcompat/appcompat/1.0.2:aar",
        "//prebuilts/tools/common/m2/repository/androidx/cardview/cardview/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/core/core/1.0.1:aar",
        "//prebuilts/tools/common/m2/repository/androidx/fragment/fragment/1.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-common/2.2.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-extensions/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata-core/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-process/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-runtime-ktx/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-runtime/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-service/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel-savedstate/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/espresso/espresso-core/3.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/espresso/espresso-idling-resource/3.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/monitor/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/runner/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/vectordrawable/vectordrawable/1.0.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/appcompat-v7/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-annotations/25.4.0:jar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-annotations/26.1.0:jar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-compat/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-core-ui/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-core-utils/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-fragment/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-media-compat/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-v4/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-vector-drawable/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/test/espresso/espresso-core/3.0.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/test/espresso/espresso-idling-resource/3.0.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/test/rules/1.0.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/test/runner/1.0.1:aar",
    ],
    use_zip = False,
    visibility = ["__subpackages__"],
)
